--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,6 +1,5 @@
 <head>
     <link rel="stylesheet" href="{{ asset('css/footer.css') }}">
-    <script src="{{ asset('js/transitionBottomTop.js') }}"></script>
 </head>
 {% block footer %}
     <section class="contact reveal_bottom">
@@ -8,11 +7,11 @@
             <h1>NOUS CONTACTER</h1>
             <article class="infos">
                 <h1 style="font-size: 1.5em">Guilherand-Granges Ardèche Handball</h1>
-                <a href="#" class="contact-element">
+                <a href="https://goo.gl/maps/E3Gp5ASPz3ZeExgu7" target="blank" class="contact-element">
                     <i class="bi bi-geo-alt"></i>
                     <p> Espace Rémy Roure - 07500 Guilherand-Granges</p>
                 </a>
-                <a href="#" class="contact-element">
+                <a href="https://www.facebook.com/GGAhandball" class="contact-element" target="blank">
                     <i class="bi bi-facebook"></i>
                     <p> @GGAhandball</p>
                 </a>
@@ -21,6 +20,7 @@
                     <p> 5107009@ffhandball.net</p>
                 </a>
             </article>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5648.982686680256!2d4.86539326279991!3d44.933678649611515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f5584d4c69dbb9%3A0x475b97510fdeb35c!2sMaison%20des%20Associations%20R%C3%A9my%20Roure!5e0!3m2!1sfr!2sfr!4v1679331222494!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </section>
 {% endblock %}
