--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,7 +1,4 @@
-
-
-.contact
-{
+.contact {
     background-color: #f8f9f9;
     display: flex;
     align-self: center;
@@ -10,41 +7,44 @@
     width: 100%;
 }
 
-.contact-container
-{
+.contact-container {
     width: 70%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
 
-.infos
-{
-    display: flex;
-    flex-direction: column;
-    padding: 2%;
+.contact-container > h1 {
     width: 100%;
 }
 
+.infos {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    width: 48%;
+}
 
+.contact-container > iframe {
+    width: 50%;
+    padding: 2%;
+}
 
-.infos>*
-{
+.infos > * {
     text-transform: uppercase;
     color: #666;
     padding-top: 2%;
 }
 
-i{
+i {
     background-color: #aaaaaa;
     padding: 5px;
     border-radius: 50%;
     color: white;
 }
 
-.contact-element
-{
+.contact-element {
     text-decoration: none;
     color: black;
     display: inline-flex;
@@ -58,6 +58,13 @@ i{
     transition-duration: 0.5s;
 }
 
-.contact-element p{
+.contact-element p {
     margin: 0 0 0 1%;
+}
+
+@media screen and (max-width: 768px) {
+    .contact-container>iframe
+    {
+        display: none;
+    }
 }
