--- a/public/css/header.css
+++ b/public/css/header.css
@@ -21,20 +21,19 @@ header
     display: inline-flex;
     justify-content: space-around;
     align-items: center;
-    /*height: 15vh;*/
+    height: 15vh;
 }
 
 .logo
 {
     flex-basis: 10%;
     text-align: center;
-    height: 15%;
 }
 
 header img
 {
     min-width: 70px;
-    width: 14%;
+    width: 7%;
 }
 
 header>a, header>section
@@ -47,7 +46,7 @@ header>img
     position: absolute;
     filter: brightness(50%);
     width: 100%;
-    /*height: 15vh;*/
+    height: 15vh;
 }
 
 .sidebar
