--- a/public/css/addTeam.css
+++ b/public/css/addTeam.css
@@ -140,3 +140,45 @@
     }
 
 }
+
+
+@media screen and (min-width: 0px) and (max-width: 726px){
+    .formCreateTeam{
+        width: 100%;
+        flex-direction: column;
+        height: 70%;
+        margin: 0 0 25px;
+        padding-bottom: 10px;
+    }
+
+    .logAndTitle img{
+        width: 20%;
+    }
+
+    .logAndTitle{
+        flex-direction: row;
+        height: 20%;
+    }
+
+    .formCreateTeam form{
+        width: 100%;
+        gap: 20px;
+    }
+
+    .labelForm{
+        gap: 25px;
+    }
+
+
+    .inputForm{
+        gap: 25px;
+        padding-right: 15px;
+    }
+
+    .inputForm input, textarea{
+        height: 40px;
+        margin-bottom: 5px;
+        margin-right: 10px;
+    }
+
+}
