--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,37 +41,56 @@
             </section>
             <img src="{{ asset('images/Loisirs.jpg') }}" alt="img" class="img">
         </section>
-
         {% if posts|length > 0 %}
             <section class="news reveal_bottom">
-                <section class="news-content">
-                    {% for post in posts %}
-                        {% set url = path('app_post_show',{'id': post.id}) %}
-                        <a class="news-element" id="{{ post.id }}" href="{{ url }}">
-                            <h3 class="name">{{ post.author }}</h3>
-                            <p class="content">{{ post.title }}</p>
-                            {% set src = '/posts/images/' ~ post.urlPhoto %}
-                            <img src="{{ asset(src) }}" alt="news-img" class="news-element-img">
-                        </a>
-                    {% endfor %}
+                <section class="news-content" id="news-content">
+
                 </section>
-                <ul class="page">
-                    <li class="page-link-li"><a href="#" class="page-link-a"><</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">1</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">2</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">3</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">4</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">5</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">6</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">7</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">8</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">9</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">10</a></li>
-                    <li class="page-link-li"><a href="#" class="page-link-a">></a></li>
-                </ul>
+                {% if page != 0 %}
+                    <ul class="page">
+                        <li class="page-link-li"><a href="#news-content" class="page-link-a"><</a></li>
+                        {% for index in range(0, page) %}
+                            <li class="page-link-li"><a href="#news-content" class="page-link-a">{{ index }}</a></li>
+                        {% endfor %}
+                        <li class="page-link-li"><a href="#news-content" class="page-link-a">></a></li>
+                    </ul>
+                {% endif %}
             </section>
         {% endif %}
         {% include 'footer.html.twig' %}
     </main>
     <script src="{{ asset('js/index.js') }}"></script>
+    <script>
+        let actualPage = 0;
+        let posts = {{ posts|json_encode|raw }};
+        let page = {{ page }};
+        posts = posts[actualPage];
+        setPosts();
+
+        let pageLinks = document.querySelectorAll('.page-link-a');
+        pageLinks.forEach( element => {
+            element.addEventListener('click', () => {
+                if(element.textContent === '<'){
+                    if(actualPage > 0){
+                        actualPage--;
+                        posts = {{ posts|json_encode|raw }};
+                        posts = posts[actualPage];
+                        setPosts();
+                    }
+                }else if(element.textContent === '>'){
+                    if(actualPage < page){
+                        actualPage++;
+                        posts = {{ posts|json_encode|raw }};
+                        posts = posts[actualPage];
+                        setPosts();
+                    }
+                }else{
+                    actualPage = parseInt(element.textContent);
+                    posts = {{ posts|json_encode|raw }};
+                    posts = posts[actualPage];
+                    setPosts();
+                }
+            });
+        });
+    </script>
 {% endblock %}
