--- a/public/css/account.css
+++ b/public/css/account.css
@@ -163,6 +163,12 @@ form input {
     transform: scale(1.1);
 }
 
+.last-post-element-img
+{
+    width: 50%;
+    max-height: 400px;
+    max-width: 400px;
+}
 
 @media screen and (min-width: 726px) and (max-width: 1024px) {
     .select {
