--- a/templates/equipe/edit.html.twig
+++ b/templates/equipe/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Modifier une équipe{% endblock %}
 {% block body %}
+    <link rel="stylesheet" href="{{ asset('css/backgroundIcons.css') }}">
     {% include'header.html.twig' %}
     <h1>Modifier une équipe</h1>
     {{ form_start(form) }}
