create the responsive for many pages

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -163,6 +163,10 @@ form input {
     transform: scale(1.1);
 }
 
+.selectresponsive{
+    display: none;
+}
+
 
 @media screen and (min-width: 726px) and (max-width: 1024px) {
     .select {
@@ -185,21 +189,47 @@ form input {
         margin-right: auto;
     }
 
+    .match{
+        height: auto !important;
+    }
+
+    .selectresponsive{
+        display: none;
+    }
 
 }
 
 
 @media screen and (min-width: 0px) and (max-width: 726px){
-    main{
+    .post{
         flex-direction: column;
     }
+
+    main{
+        flex-direction: column;
+        height: 100vh;
+    }
+
+    .match{
+        height: auto !important;
+    }
+
     .select{
-        flex-direction: row;
-        flex-basis: 35%;
+        display: none;
     }
 
     .element h1{
         overflow: auto;
     }
+
+    .selectresponsive{
+        display: flex;
+        flex-direction: row;
+
+    }
+
+
+
+
 
 }
