--- a/templates/account/manageAccount.html.twig
+++ b/templates/account/manageAccount.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Gérer les comptes{% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ asset('css/backgroundIcons.css') }}">
     {% include 'header.html.twig' %}
     <section id="allUsers" style="padding: 70px 25%;height: 90vh"></section>
     {% include 'footer.html.twig' %}
