--- a/templates/equipe/create.html.twig
+++ b/templates/equipe/create.html.twig
@@ -26,7 +26,7 @@
                 <section class="inputForm">
                     {{ form_widget(form.libelle, {'attr' : {'class':'inputCreateTeam'}}) }}
                     {{ form_widget(form.entraineur, {'attr' : {'class':'inputCreateTeam'}}) }}
-                    {{ form_widget(form.creneaux, {'attr' : {'class':'inputCreateTeam'}}) }}
+                    {{ form_widget(form.creneaux, {'attr' : {'class':'inputCreateTeam', 'placeholder':'Jour 00h-00h'}}) }}
                     {{ form_widget(form.url_photo, {'attr' : {'class':'inputCreateTeam'}}) }}
                     {{ form_widget(form.url_result_calendrier, {'attr' : {'class':'inputCreateTeam'}}) }}
                     {{ form_widget(form.commentaire, {'attr' : {'class':'inputCreateTeam'}}) }}
