--- a/public/css/allTeam.css
+++ b/public/css/allTeam.css
@@ -13,8 +13,8 @@
     border-radius: 25px;
 }
 
-h2{
-    color: black;
+span, span:before, span:after{
+    background: black !important;
 }
 
 .teamArticle:hover{
@@ -88,6 +88,25 @@ h2{
     }
     .infoSection>h2{
         font-size: 3.5rem;
+    }
+
+}
+
+
+@media screen and (min-width: 0px) and (max-width: 726px){
+
+    .allTeam{
+        margin: 0 10px 10px 10px;
+        background-color: rgba(0,0,0,0);
+        width: 100%;
+    }
+
+    .teamArticle{
+        width: 90%;
+    }
+
+    .buttonSection{
+        margin-left: 10px;
     }
 
 }
