--- a/public/css/register.css
+++ b/public/css/register.css
@@ -76,20 +76,30 @@ main{
 }
 
 @media screen and (min-width: 0px ) and (max-width: 726px){
+    main{
+        height: 600px;
+
+    }
+
+
     .registrateForm{
         margin: 0;
         width: 100%;
         height: 100% !important;
         padding: 0;
+        gap: 5%;
+        font-size: 1.2em;
     }
     .left{
         margin-left: auto;
-        width: 40%;
+        margin-right: auto;
+        width: 60%;
     }
 
     .rigth{
-        width: 40%;
+        width: 60%;
         margin-right: auto;
+        margin-left: auto;
     }
 
     .left form {
@@ -97,7 +107,7 @@ main{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 90%;
+        width: 100%;
     }
 
     .left div {
@@ -107,3 +117,4 @@ main{
     }
 
 }
+
