--- a/templates/equipe/edit.html.twig
+++ b/templates/equipe/edit.html.twig
@@ -2,20 +2,25 @@
 {% block title %}Modifier une équipe{% endblock %}
 {% block body %}
     <link rel="stylesheet" href="{{ asset('css/backgroundIcons.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/editTeamAndMatchs.css') }}">
     {% include'header.html.twig' %}
-    <h1>Modifier une équipe</h1>
-    {{ form_start(form) }}
-    {{ form_row(form.libelle) }}
-    {{ form_row(form.entraineur) }}
-    {{ form_row(form.creneaux) }}
-    {% set img = '/images/'~ image %}
-    <label for="actualPicture">Photo actuelle</label>
-    <img src="{{ asset(img) }}" alt="actual_picture" id="actualPicture">
-    {{ form_row(form.url_photo) }}
-    {{ form_row(form.url_result_calendrier) }}
-    {{ form_row(form.commentaire) }}
-    <button type="submit" class="btn btn-primary">Modifier</button>
-    {{ form_end(form) }}
+    <main>
+        <div class="container">
+            <h1>Modifier une équipe</h1>
+            {{ form_start(form) }}
+            {{ form_row(form.libelle) }}
+            {{ form_row(form.entraineur) }}
+            {{ form_row(form.creneaux) }}
+            {% set img = '/images/'~ image %}
+            <label for="actualPicture">Photo actuelle</label>
+            <img src="{{ asset(img) }}" alt="actual_picture" id="actualPicture">
+            {{ form_row(form.url_photo) }}
+            {{ form_row(form.url_result_calendrier) }}
+            {{ form_row(form.commentaire) }}
+            <button type="submit" class="btn btn-primary">Modifier</button>
+            {{ form_end(form) }}
+        </div>
+    </main>
     {% include 'footer.html.twig' %}
 {% endblock %}
 
