--- a/templates/about/infos.html.twig
+++ b/templates/about/infos.html.twig
@@ -10,16 +10,22 @@
     </header>
     <main>
         <section class="section-content">
-            <p>Avec plus de 180 adhérents, le Guilherand-Granges Ardèche Handball (GGAHB) privilégie la formation des jeunes depuis le minihand (école de hand labellisée) jusqu’aux moins de 18 ans.</p>
-            <p>Depuis la saison 2011-2012, suite à entente avec le club voisin HBGG, le GGAHB Handball gère le pôle handball féminin de Guilherand-Granges.</p>
-            <p>Le club participe aux championnats féminins et dispose d’un fort contingent de pratiquants « loisirs » mixtes (joueurs en « limite d’âge », parents de jeunes joueurs, découverte tardive du handball, adultes désireux d’entretenir leur forme, …).</p>
-            <p>Les équipes du GGAHB sont engagées en Championnat Drôme-Ardèche et en Championnat Ligue Rhône-Alpes Auvergne.</p>
+            <p>Avec plus de 180 adhérents, le Guilherand-Granges Ardèche Handball (GGAHB) privilégie la formation des
+                jeunes depuis le minihand (école de hand labellisée) jusqu’aux moins de 18 ans.</p>
+            <p>Depuis la saison 2011-2012, suite à entente avec le club voisin HBGG, le GGAHB Handball gère le pôle
+                handball féminin de Guilherand-Granges.</p>
+            <p>Le club participe aux championnats féminins et dispose d’un fort contingent de pratiquants « loisirs »
+                mixtes (joueurs en « limite d’âge », parents de jeunes joueurs, découverte tardive du handball, adultes
+                désireux d’entretenir leur forme, …).</p>
+            <p>Les équipes du GGAHB sont engagées en Championnat Drôme-Ardèche et en Championnat Ligue Rhône-Alpes
+                Auvergne.</p>
             <p>Le GGAHB c’est aussi :</p>
             <article class="timeline">
                 <ul>
                     <li>
                         <div>
-                            Une équipe dirigeante efficace et soudée, avec pour devise « gérer et jouer en se faisant plaisir tout en respectant les règles »
+                            Une équipe dirigeante efficace et soudée, avec pour devise « gérer et jouer en se faisant
+                            plaisir tout en respectant les règles »
                         </div>
                     </li>
                     <li>
@@ -45,6 +51,7 @@
 
                 </ul>
             </article>
+            <a href="{{ asset('pdf/Charte-GGAHB.pdf') }}" target="blank" id="charte"><h1>Charte du club</h1></a>
         </section>
     </main>
     <script src="{{ asset('js/about.js') }}"></script>
