fix matches.js : formatting a DateTime, processing next match countdown

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <link rel="stylesheet" href="{{ asset('css/account.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/matchSection.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/matchesPreview.css') }}">
     {% include 'header.html.twig' %}
     <main>
         <aside class="select">
