--- a/templates/match/preview.html.twig
+++ b/templates/match/preview.html.twig
@@ -1,5 +1,5 @@
 {% block matchPreview %}
-    <link rel="stylesheet" href="{{ asset("css/matchSection.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/matchesPreview.css") }}">
     <section class="match reveal_bottom">
         <fieldset class="nextMatch matchSection">
             <legend><h2>Prochain match</h2></legend>
