refactor : new way of importing more css stylesheet using twig

--- a/templates/about/equipe.html.twig
+++ b/templates/about/equipe.html.twig
@@ -1,10 +1,9 @@
 {% extends 'base.html.twig' %}
-
+{% block externalCSS %}<link rel="stylesheet" href="{{ asset('css/about.css') }}">{% endblock %}
 {% block title %}Equipe dirigeante{% endblock %}
 
 {% block body %}
     {% include 'header.html.twig' %}
-    <link rel="stylesheet" href="{{ asset('css/about.css') }}">
     <header class="header-about">
         <h1>Equipe dirigeante</h1>
     </header>
