--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,9 +1,12 @@
 {% extends 'base.html.twig' %}
+{% block externalCSS %}
+    <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/matchesPreview.css") }}">
+{% endblock %}
 
 {% block title %}Accueil{% endblock %}
 {% block body %}
     {% include 'header.html.twig' %}
-    <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <main>
         {% include 'match/preview.html.twig' %}
         <section class="pic-ctn reveal_bottom">
