--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -6,6 +6,11 @@ p {
     text-align: center;
 }
 
+/*---------------------Matchs preview------------------*/
+.match:nth-child(1){
+    background-color: #f2f2f2;
+}
+
 /*---------------------About section------------------*/
 
 .pic-ctn{
