--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -62,6 +62,12 @@ i {
     margin: 0 0 0 1%;
 }
 
+@media screen and (min-width: 726px) and (max-width: 1024px) {
+    .contact-container{
+        width: 85%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .contact-container>iframe
     {
@@ -70,6 +76,10 @@ i {
 
     .infos{
         width: 100%;
+    }
+
+    .contact-container{
+        width: 95%;
     }
 
 }
