--- a/public/css/matchesPreview.css
+++ b/public/css/matchesPreview.css
@@ -3,10 +3,15 @@
 .match{
     display: flex;
     justify-content: space-around;
-    height: 400px;
+    min-height: 350px;
     align-items: center;
     flex-wrap: wrap;
     color: #EAEAEA;
+}
+
+.matchSection{
+    padding-left: 1.5em;
+    padding-right: 1.5em;
 }
 
 
@@ -67,6 +72,8 @@ legend>h2{
 
 .next-match-date, .next-match-location, .next-match-remaining-time {
     font-size: 1.5em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .next-match-location > i{
@@ -108,6 +115,8 @@ legend>h2{
 
 .last-match-date, .last-match-location, .last-match-remaining-time {
     font-size: 1.5em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .last-match-location > i{
