--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -159,5 +159,5 @@
         </section>
     </main>
     <script src="{{ asset('js/account.js') }}"></script>
-    <script src="{{ asset('js/matches.js') }}"></script>
+    <script src="{{ asset('js/matchesPreview.js') }}"></script>
 {% endblock %}
