--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -15,7 +15,7 @@
     <main>
         <section class="main ">
             <section class="allTeam">
-                <h1 style="width: 100%; text-align: center;color: black">Nos équipes</h1>
+                <h1 style="width: 100%; text-align: center">Nos équipes</h1>
                 <section id="loader"></section>
             </section>
         </section>
