--- a/templates/match/index.html.twig
+++ b/templates/match/index.html.twig
@@ -18,13 +18,13 @@
             <article>
                 <label for="category">Par équipe</label>
                 <select name="category" id="category">
-                    <option value="all" selected>Toutes les équipes</option>
+                    <option value="all" selected>Toutes</option>
                 </select>
             </article>
             <article>
                 <label for="gymnase">Par gymnase</label>
                 <select name="gymnase" id="gymnase">
-                    <option value="all" selected>Tous les gymnases</option>
+                    <option value="all" selected>Tous</option>
                 </select>
             </article>
             <article>
@@ -37,7 +37,7 @@
         </section>
     </main>
     {% include 'footer.html.twig' %}
-    <script src="{{ asset('js/matchs.js') }}"></script>
+    <script src="{{ asset('js/matchesList.js') }}"></script>
 {% endblock %}
 
 
