--- a/templates/match/preview.html.twig
+++ b/templates/match/preview.html.twig
@@ -45,5 +45,5 @@
             </table>
         </fieldset>
     </section>
-    <script src="{{ asset('js/matches.js') }}"></script>
+    <script src="{{ asset('js/matchesPreview.js') }}"></script>
 {% endblock %}
