--- a/public/css/allMatches.css
+++ b/public/css/allMatches.css
@@ -20,6 +20,7 @@ main
     margin: 10px auto 10px;
     border: solid 1px forestgreen;
     border-radius: 12px;
+    font-size: 1.4em;
 }
 
 .form{
@@ -50,6 +51,13 @@ article select
     max-width: 100% ;
 }
 
+article input {
+    width: 20px;
+    height: 20px;
+    margin-left: 1em;
+    text-align: center;
+}
+
 .list-group-item{
     background-color: rgba(255,255,255,0.8);
     width: 95%;
@@ -77,8 +85,10 @@ article select
 .list-group-item-heading{
     width: 80%;
     align-self: center;
+    padding-left: 1em;
 }
 .list-group-item-text{
+    padding-right: 0.5em;
     width: 20%;
     color: black;
     border-right: solid 1px forestgreen;
@@ -88,11 +98,20 @@ article select
     align-items: center;
 }
 
+.list-group-item-text > p {
+    margin-bottom: 0.2em;
+}
+
 .icons
 {
-    width: 20%;
+    width: 60%;
     display: flex;
     justify-content: space-around;
+    font-size: 2em;
+}
+
+.icons i {
+    color: black;
 }
 
 .list-group-item{
@@ -116,7 +135,7 @@ article select
     }
 
     .formGetMatches{
-        width: 50%;
+        width: 75%;
         height: 50%;
         margin-top: 0;
     }
