--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -37,11 +37,12 @@
     padding-top: 2%;
 }
 
-i {
+.infos i {
     background-color: #aaaaaa;
-    padding: 5px;
-    border-radius: 50%;
+    padding: 6px;
+    border-radius: 70%;
     color: white;
+    font-size: 1.5em;
 }
 
 .contact-element {
