--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -13,7 +13,7 @@
 </head>
 {% block header %}
     <header>
-        <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
+        <img src="{{ asset('images/banniere_fixed.png') }}" alt="banner" class="banner">
         <a href="{{ path('app_home') }}" class="logo"><img src="{{ asset('images/logo.png') }}" alt="logo"></a>
 
         <ul class="sidebar menu">
